Bug #1965 Opening a cursor hangs client when malformed select fails
Submitted: 27 Nov 2003 3:05 Modified: 27 Nov 2003 9:09
Reporter: Per-Erik Martin Email Updates:
Status: Closed
Category:Server Severity:S2 (Serious)
Version:5.0 OS:Any (any)
Assigned to: Bugs System Target Version:

[27 Nov 2003 3:05] Per-Erik Martin
Description:
Certain failures in a SELECT causes the OPENing of a cursor to hang
the client. (It seems the error message is never sent.)

How to repeat:
create table t1 (a int);
delimiter |;
create procedure cur()
begin
  declare c cursor for select a from t1 order by aname;
  open c;
end|
delimiter ;|
call cur();
[27 Nov 2003 9:09] Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html