Fixed BUG#1965: Opening a cursor hangs client when malformed select fails   and BUG#1966: "select 1 into a" on top-level hangs client